@@ -1,5 +1,8 @@
 2004-02-13  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
+	* lily/auto-beam-engraver.cc (test_moment): use
+	updated_grob_properties() to retrieve autoBeam settings.
+
 	* lily/spacing-spanner.cc: bound shortest_playing_len by
 	measure_length
 
